# vrchat-join-leave-notifier

./: Cargo.toml  flake.nix
.github/workflows/: build.yml
src/: main.rs
src/audio/: mod.rs
src/config/: mod.rs  setup_vr.rs  utils.rs
src/log_watcher/: mod.rs
src/notifier/: mod.rs
src/parser/: mod.rs  utils.rs
src/vr/: manifest.rs  mod.rs  runtime.rs  setup.rs
