[package]
name = "vrchat-join-leave-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.98"
deunicode = "=1.6.2"
dirs = "=6.0.0"
openvr = { git = "https://github.com/SpiralP/rust-openvr.git", branch = "master" }
rodio = { version = "=0.20.1", default-features = false, features = ["wav"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
time = { version = "=0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "=1.46.0", features = ["full"] }
