[package]
name = "vrchat-join-leave-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.99"
deunicode = "=1.6.2"
dirs = "=6.0.0"
openvr = { git = "https://github.com/SpiralP/rust-openvr.git", branch = "master" }
rodio = { version = "=0.21.1", default-features = false, features = ["playback", "wav"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
time = { version = "=0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "=1.47.1", features = ["full"] }
