[package]
name = "vrchat-join-leave-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.100"
deunicode = "=1.6.2"
dirs = "=6.0.0"
openvr = { git = "https://github.com/SpiralP/rust-openvr.git", branch = "master" }
rodio = { version = "=0.21.1", default-features = false, features = ["playback", "wav"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.146"
time = { version = "=0.3.44", features = ["formatting", "local-offset"] }
tokio = { version = "=1.48.0", features = ["full"] }
